force-app/main/default/objects/Spending_Plan__c/Spending_Plan__c.object-meta.xml
<CustomObject>
    <label>Spending Plan</label>
    <nameField>
        <label>SpendingPlan ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spending Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>