force-app/main/default/objects/Spending_Plan__c/fields/Annualized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Amount__c</fullName>
    <formula>Case(Frequency__c, 
&quot;Weekly&quot;, Plan_Amount__c * 52,
&quot;Monthly&quot;, Plan_Amount__c * 12,
Plan_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>