force-app/main/default/objects/Spending_Plan__c/fields/Approximate_Annual_Spending__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Annual_Spending__c</fullName>
    <label>Approx. Annual Spending</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>