force-app/main/default/objects/Spending_Plan__c/fields/Approximate_Duration_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Duration_of_Funds__c</fullName>
    <inlineHelpText>How long are funds expected to last, given current balance and estimated annual spending?</inlineHelpText>
    <label>Approximate Duration of Funds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>