force-app/main/default/objects/Spending_Plan__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Fees</fullName>
            </value>
            <value>
                <fullName>Attorney Fees</fullName>
            </value>
            <value>
                <fullName>Auto/Transportation</fullName>
            </value>
            <value>
                <fullName>Bank Fees</fullName>
            </value>
            <value>
                <fullName>Cable/Internet/Phone</fullName>
            </value>
            <value>
                <fullName>Caregiving</fullName>
            </value>
            <value>
                <fullName>Case Management Fees</fullName>
            </value>
            <value>
                <fullName>CFPD Case Management Fees</fullName>
            </value>
            <value>
                <fullName>Child Care Expenses</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Companion Services</fullName>
            </value>
            <value>
                <fullName>Conservator Fees</fullName>
            </value>
            <value>
                <fullName>CFPD Conservatorship Fees</fullName>
            </value>
            <value>
                <fullName>CFPD Personal Representative Fees</fullName>
            </value>
            <value>
                <fullName>Court Fees</fullName>
            </value>
            <value>
                <fullName>Damages/Property Management</fullName>
            </value>
            <value>
                <fullName>Day Program</fullName>
            </value>
            <value>
                <fullName>Debt Balance Payoff</fullName>
            </value>
            <value>
                <fullName>Dental Expense</fullName>
            </value>
            <value>
                <fullName>Distribution to ABLE Account</fullName>
            </value>
            <value>
                <fullName>Education Expenses</fullName>
            </value>
            <value>
                <fullName>Electronics/Computers</fullName>
            </value>
            <value>
                <fullName>Entertainment/Recreation/Memberships</fullName>
            </value>
            <value>
                <fullName>Establishment/Set-Up Fees</fullName>
            </value>
            <value>
                <fullName>Groceries/Food</fullName>
            </value>
            <value>
                <fullName>Guardianship Services</fullName>
            </value>
            <value>
                <fullName>Hair/Nail/Hygiene Services</fullName>
            </value>
            <value>
                <fullName>HOA Expenses</fullName>
            </value>
            <value>
                <fullName>Home Furnishings/Appliances</fullName>
            </value>
            <value>
                <fullName>Home Maintenance/Repairs/Modifications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>