force-app/main/default/objects/Spending_Plan__c/fields/Plan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Plan_Amount__c</fullName>
    <label>Plan Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>