force-app/main/default/objects/Spending_Plan__c/fields/Quality_of_Life_Goal__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Life_Goal__c</fullName>
    <label>Quality of Life Goal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dignity/Privacy</fullName>
            </value>
            <value>
                <fullName>Emotional Well-Being</fullName>
            </value>
            <value>
                <fullName>Enjoyment</fullName>
            </value>
            <value>
                <fullName>Material Well-Being</fullName>
            </value>
            <value>
                <fullName>Personal Development/Meaningful Activity</fullName>
            </value>
            <value>
                <fullName>Physical Comfort/Well-Being</fullName>
            </value>
            <value>
                <fullName>Relationships/Social Inclusion</fullName>
            </value>
            <value>
                <fullName>Safety/Security/Order</fullName>
            </value>
            <value>
                <fullName>Self-Determination/Autonomy/Rights</fullName>
            </value>
            <value>
                <fullName>Spiritual Well-Being</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>