force-app/main/default/objects/Spending_Plan__c/fields/Specific_Item_Service__c.field-meta.xml
<CustomField>
    <fullName>Specific_Item_Service__c</fullName>
    <inlineHelpText>e.g. cable, therapy, math class, car insurance</inlineHelpText>
    <label>Specific Item/Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>