force-app/main/default/objects/Spending_Plan__c/fields/Staff_Person__c.field-meta.xml
<CustomField>
    <fullName>Staff_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Spending_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>