force-app/main/default/objects/Spending_Plan__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <summarizedField>Spending_Plan_Details__c.Amount__c</summarizedField>
    <summaryForeignKey>Spending_Plan_Details__c.Spending_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>