force-app/main/default/objects/Spending_Plan__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust</label>
    <referenceTo>Trust__c</referenceTo>
    <relationshipLabel>Spending Plans</relationshipLabel>
    <relationshipName>Spending_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>