force-app/main/default/objects/Spending_Plan__c/fields/X18_Digit_Spending_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Spending_Plan_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Spending Plan ID</label>
    <type>Text</type>
</CustomField>