force-app/main/default/objects/Spending_Plan__c/fields/XStaff_Person__c.field-meta.xml
<CustomField>
    <fullName>XStaff_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XStaff Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Spending_Plans_New</relationshipName>
    <type>Lookup</type>
</CustomField>