force-app/main/default/objects/Spending_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Contact__c</columns>
    <columns>Category__c</columns>
    <columns>Specific_Item_Service__c</columns>
    <columns>Plan_Amount__c</columns>
    <columns>Annualized_Amount__c</columns>
    <columns>Frequency__c</columns>
    <columns>Date_of_Review__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>